<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.area51.mapasgoogle.MainActivity" >

    <item
        android:showAsAction="always"
        android:title="@string/app_name" >
        
        <menu >
            <item
                android:id="@+id/btnNormal"
                android:title="@string/textoNormal"
                android:showAsAction="always"
                />
            <item 
                android:id="@+id/btnHibrido"
                android:title="@string/textoHibrido"
                android:showAsAction="always"
                />
            <item 
                android:id="@+id/btnTerreno"
                android:title="@string/textoTerreno"
                android:showAsAction="always"
                />
            <item 
                android:id="@+id/btnSatelite"
                android:title="@string/textoSatelite"
                android:showAsAction="always"
                />
            
            
        </menu>
        
    </item>

</menu>
